Update of Rests controllers
